# CyberSOC

./: .gitignore  Dockerfile  README.md  __init__.py  blog.md  client.py  dashboard_server.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-training.txt  requirements.txt
dashboard/: index.html
dashboard/css/: styles.css
dashboard/js/: animations.js  api.js  app.js  graphs.js
server/: __init__.py  action_validation.py  app.py  episode_sandbox.py  graders.py  play_environment.py  requirements.txt  task_generator.py  tasks.py  threat_graph.py  tool_router.py  visualize_graph.py
tests/: test_integration.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py  test_task6.py  test_task7.py  test_task8.py  test_task9.py
training/: CyberSOC_GRPO_Training.ipynb  agent_archive.py  collect_sft.py  collect_sft_data.py  config.py  eval_harness.py  freeze_alternate.py  pfsp_scheduler.py  reward_funcs.py  sft_data.jsonl  train_grpo.py
